--- a/desktop/conf.dist/hue.ini
+++ b/desktop/conf.dist/hue.ini
@@ -898,14 +898,16 @@
   # The maximum number of partitions that will be included in the SELECT * LIMIT sample query for partitioned tables.
   ## query_partitions_limit=10
 
-  # A limit to the number of cells (rows * columns) that can be downloaded from a query
-  # (e.g. - 10K rows * 1K columns = 10M cells.)
+  # A limit to the number of rows that can be downloaded from a query before it is truncated.
   # A value of -1 means there will be no limit.
-  ## download_cell_limit=10000000
+  ## download_row_limit=100000
 
   # Hue will try to close the Hive query when the user leaves the editor page.
   # This will free all the query resources in HiveServer2, but also make its results inaccessible.
   ## close_queries=false
+
+  # Hue will use at most this many HiveServer2 sessions per user at a time.
+  ## max_number_of_sessions=1
 
   # Thrift version to use when communicating with HiveServer2.
   # New column format is from version 7.
